fixed spacing between tree and word-spaces

--- a/front-end-dev/javascript/jQuery/exercises/guess-a-word/stylesheets/style.css
+++ b/front-end-dev/javascript/jQuery/exercises/guess-a-word/stylesheets/style.css
@@ -75,7 +75,8 @@ p {
   font-size: 20px;
 }
 
-p:empty {
+#messages:empty,
+#messages:empty + p > a {
   display: none;
 }
 
